--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-transpile-modules": "^10.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.5",
     "react-owl-carousel": "^2.3.3"
   },
