--- a/package.json
+++ b/package.json
@@ -13,12 +13,21 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@prisma/client": "^6.4.1",
+    "axios": "^1.8.2",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
+    "cookie": "^1.0.2",
     "croppie": "^2.6.5",
     "font-awesome": "^4.7.0",
+    "iron-session": "^8.0.4",
     "jquery": "^3.7.1",
-    "next": "15.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.13.0",
+    "next": "^15.2.1",
+    "next-auth": "^4.24.11",
     "next-transpile-modules": "^10.0.1",
+    "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
