--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "deploy" : "next dev --turbopack",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
@@ -15,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@prisma/client": "^6.4.1",
     "axios": "^1.8.2",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
     "cookie": "^1.0.2",
@@ -30,14 +32,15 @@
     "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.5",
     "react-owl-carousel": "^2.3.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "^20.17.24",
+    "@types/react": "^19.0.10",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "typescript": "^5"
