--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "iron-session": "^8.0.4",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.1",
     "mysql2": "^3.13.0",
     "next": "^15.2.1",
     "next-auth": "^4.24.11",
