--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/x-tree-view": "^7.14.0",
     "@prisma/client": "^6.5.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@upstash/qstash": "^2.7.23",
     "apexcharts": "^4.5.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
