--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next": "^15.2.3",
     "next-auth": "^4.24.11",
     "next-transpile-modules": "^10.0.1",
+    "node-cron": "^3.0.3",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.4",
