--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-bootstrap": "^2.10.4",
     "react-chartjs-2": "^5.3.0",
     "react-color": "^2.19.3",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
