--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "sass-min": "sass ./public/assets/scss/:./public/assets/css/ --style compressed"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
     "@aws-sdk/client-s3": "^3.777.0",
     "@aws-sdk/s3-request-presigner": "^3.777.0",
     "@ckeditor/ckeditor5-build-classic": "^44.3.0",
@@ -24,7 +25,7 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@mui/x-tree-view": "^7.14.0",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.6.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@upstash/qstash": "^2.7.23",
     "apexcharts": "^4.5.0",
