--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "chart.js": "^4.4.8",
     "cookie": "^1.0.2",
     "croppie": "^2.6.5",
+    "crypto": "^1.0.1",
     "eslint": "^9.9.0",
     "font-awesome": "^4.7.0",
     "formidable": "^3.5.2",
@@ -53,6 +54,7 @@
     "next-auth": "^4.24.11",
     "next-transpile-modules": "^10.0.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.1",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.4",
